Added country indicator and city name saves through page refreshes

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 	<body>
 		<div class="weather-container">
 			<div class="form-container">
-				<form action="">
+				<form>
 					<label for="cityInput">Placename:</label>
 					<input type="text" id="cityInput" placeholder="e.g: London" />
-					<input type="submit" id="submit" value="OK" />
+					<input type="submit" id="submit" value="OK" onclick="updateCity();" />
 				</form>
 			</div>
 
